# rnn

./: .gitignore  COPYING  Makefile  README  autogen.sh  configure.ac
examples/: gen_target.py
examples/golden_mean_shift/: config.txt  start.sh
examples/henon_map/: config.txt  start.sh
examples/reber_grammar/: config.txt  start.sh
examples/sample1/: start.sh
examples/sample10/: config.txt  start.sh
examples/sample11/: config.txt  start.sh
examples/sample12/: config.txt  start.sh
examples/sample13/: config.txt
examples/sample2/: start.sh
examples/sample3/: start.sh
examples/sample4/: start.sh
examples/sample5/: config.txt  start.sh
examples/sample6/: config.txt  start.sh
examples/sample7/: config.txt  start.sh
examples/sample8/: config.txt  start.sh
examples/sample9/: config.txt  start.sh
examples/sin_curve/: config.txt  start.sh
src/: Makefile  Makefile.am
src/common/: entropy.c  entropy.h  mt19937ar.c  mt19937ar.h  rnn.c  rnn.h  rnn_lyapunov.c  rnn_lyapunov.h  rnn_runner.c  rnn_runner.h  solver.c  solver.h  utils.c  utils.h
src/join-test/: make-all.sh
src/python/: Makefile  Makefile.am  gen_target.py  plot-log  plot_log.py  print-log  print_log.py  rnn-generate  rnn-generate-with-file  rnn-kl-div  rnn-plot-log  rnn-print-log  rnn-scale  rnn-scale-restore  rnn_generate_with_file.py  rnn_kl_div.py  rnn_plot_log.py  rnn_print_log.py  rnn_runner.py  rnn_scale.py
src/rnn-generate/: Makefile  Makefile.am  main.c  main.h
src/rnn-learn/: Makefile  Makefile.am  main.c  main.h  parameter.h  parse.c  parse.h  print.c  print.h  target.c  target.h  training.c  training.h
src/rnn-lyapunov/: Makefile  Makefile.am  lyapunov.c  lyapunov.h  main.c  main.h  parameter.h
src/unit-test/: Makefile  Makefile.am  config.h  config_test.h  main.c  minunit.c  minunit.h  my_assert.h  test_entropy.c  test_entropy.h  test_parse.c  test_parse.h  test_rnn.c  test_rnn.h  test_rnn_lyapunov.c  test_rnn_lyapunov.h  test_rnn_runner.c  test_rnn_runner.h  test_solver.c  test_solver.h  test_target.c  test_target.h  test_utils.c  test_utils.h
